--- a/style.css
+++ b/style.css
@@ -170,5 +170,9 @@ h1, h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100%;
+    height: 80%;
+}
+
+#score.blink {
+    color:rosybrown;
 }
